Fixed a bug where the  permalink would make the headline jump a little

--- a/docs/content/css/base.scss
+++ b/docs/content/css/base.scss
@@ -439,7 +439,7 @@ table {
 .permalink {
   display: none;
   margin-left: 5px;
-  vertical-align: top;
+  /*vertical-align: top;*/
   color: $color-primary;
   border: 0 !important;
 }
